--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -26,18 +26,22 @@
         .leaflet-pane{
             position: static ;
         }
+        .leaflet-control-attribution{
+            visibility: hidden;
+        }
+
         #timestamp{
             text-align:center;
             position: absolute;
-            bottom: 1%;
+            bottom: 0;
             left: 1%;
             pointer-events: none;
         }
         #load{
             position: absolute;
-            bottom: 1%;
-            left: 1%;
-            width: 8.3%;
+            bottom: 0;
+
+            width: 0;
             height: 20px;
             background-color: rgba(255, 161, 20, 0.35);
         }
@@ -200,12 +204,11 @@
                 showFrame(animationPosition + 1);
                 var elem = document.getElementById("load");
 
-                if(animationPosition === 0){
-                    elem.style.width = '8.3%';
-                }
-                p = (animationPosition * 8.3) + 8.3;
+                p = (animationPosition * 7.69) + 7.69;
                 elem.style.width = p + '%';
+
                 console.log(p);
+                console.log(animationPosition);
 
 
                 animationTimer = setTimeout(play, 500);
