--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -69,7 +69,7 @@
 </head>
 
 <body>
-    <div id="map" class="map"></div>
+
     <div class="time">
         <div id="Clock" class="clock" onload="showTime()"></div>
         <div id="Date" class="date" onload="showDate()"></div>
@@ -77,7 +77,7 @@
 
     <div id="load"></div>
     <div id="timestamp"></div>
-
+    <div id="map" class="map"></div>
     <script>
         function showTime(){
             var date = new Date();
@@ -123,104 +123,106 @@
                 }).addTo(map);
     </script>
     <script>
-        function rainLayerUpdater() {
-            var timestamps = [];
-            var radarLayers = [];
+        let timestamps = [];
+        let radarLayers = [];
 
-            var animationPosition = 0;
-            var animationTimer = false;
+        let animationPosition = 0;
+        let animationTimer = false;
 
-            var apiRequest = new XMLHttpRequest();
-            apiRequest.open("GET", "https://api.rainviewer.com/public/maps.json", true);
+        function getNewTime(){
+            let f = true;
+            if(timestamps.length === 0){
+                f = false;
+            }
+            let apiRequest = new XMLHttpRequest();
+            apiRequest.open("GET", "https://api.rainviewer.com/public/maps.json", f);
             apiRequest.onload = function(e) {
                 timestamps = JSON.parse(apiRequest.response);
-                showFrame(-1);
-                playStop();
             };
             apiRequest.send();
-            setTimeout(rainLayerUpdater, 1000*60*10);
-            function addLayer(ts) {
-                if (!radarLayers[ts]) {
-                    radarLayers[ts] = new L.TileLayer('https://tilecache.rainviewer.com/v2/radar/' + ts + '/256/{z}/{x}/{y}/8/1_1.png', {
-                        tileSize: 256,
-                        opacity: 0.001,
-                        zIndex: ts
-                    });
-                }
-                if (!map.hasLayer(radarLayers[ts])) {
-                    map.addLayer(radarLayers[ts]);
-                }
+            setTimeout(getNewTime, 1000*60*10);
+
+        }
+        getNewTime();
+        if (timestamps.length !== 0){
+            showFrame(-1);
+            playStop();
+        }
+
+        function addLayer(ts) {
+            if (!radarLayers[ts]) {
+                let layers = 'https://tilecache.rainviewer.com/v2/radar/' + ts + '/256/{z}/{x}/{y}/8/1_1.png';
+                radarLayers[ts] = new L.TileLayer(layers, {
+                    tileSize: 256,
+                    opacity: 0.001,
+                    zIndex: ts
+                });
             }
-
-            function changeRadarPosition(position, preloadOnly) {
-                while (position >= timestamps.length) {
-                    position -= timestamps.length;
-                }
-                while (position < 0) {
-                    position += timestamps.length;
-                }
-
-                var currentTimestamp = timestamps[animationPosition];
-                var nextTimestamp = timestamps[position];
-
-                addLayer(nextTimestamp);
-
-                if (preloadOnly) {
-                    return;
-                }
-
-                animationPosition = position;
-
-                if (radarLayers[currentTimestamp]) {
-                    radarLayers[currentTimestamp].setOpacity(0);
-                }
-                radarLayers[nextTimestamp].setOpacity(100);
-                var logDate = new Date(nextTimestamp*1000);
-                var h = logDate.getHours();
-                var m = logDate.getMinutes();
-
-                h = (h < 10) ? "0" + h : h;
-                m = (m < 10) ? "0" + m : m;
-                logTime = h + ":" + m;
-                document.getElementById("timestamp").innerHTML = logTime;
-            }
-
-            function showFrame(nextPosition) {
-                var preloadingDirection = nextPosition - animationPosition > 0 ? 1 : -1;
-                changeRadarPosition(nextPosition);
-                changeRadarPosition(nextPosition + preloadingDirection, true);
-            }
-
-            function stop() {
-                if (animationTimer) {
-                    clearTimeout(animationTimer);
-                    animationTimer = false;
-                    return true;
-                }
-                return false;
-            }
-
-            function play() {
-                showFrame(animationPosition + 1);
-                var elem = document.getElementById("load");
-
-                p = (animationPosition * 7.69) + 7.69;
-                elem.style.width = p + '%';
-
-                console.log(p);
-                console.log(animationPosition);
-
-
-                animationTimer = setTimeout(play, 500);
-            }
-
-            function playStop() {
-                if (!stop()) {
-                    play();
-                }
+            if (!map.hasLayer(radarLayers[ts])) {
+                map.addLayer(radarLayers[ts]);
             }
         }
-        rainLayerUpdater();
+
+        function changeRadarPosition(position, preloadOnly) {
+            while (position >= timestamps.length) {
+                position -= timestamps.length;
+            }
+            while (position < 0) {
+                position += timestamps.length;
+            }
+
+            let currentTimestamp = timestamps[animationPosition];
+            let nextTimestamp = timestamps[position];
+
+            addLayer(nextTimestamp);
+
+            if (preloadOnly) {
+                return;
+            }
+
+            animationPosition = position;
+
+            if (radarLayers[currentTimestamp]) {
+                radarLayers[currentTimestamp].setOpacity(0);
+            }
+            radarLayers[nextTimestamp].setOpacity(100);
+            let logDate = new Date(nextTimestamp*1000);
+            let h = logDate.getHours();
+            let m = logDate.getMinutes();
+
+            h = (h < 10) ? "0" + h : h;
+            m = (m < 10) ? "0" + m : m;
+            document.getElementById("timestamp").innerHTML = h + ":" + m;
+        }
+
+        function showFrame(nextPosition) {
+            let preloadingDirection = nextPosition - animationPosition > 0 ? 1 : -1;
+            changeRadarPosition(nextPosition);
+            changeRadarPosition(nextPosition + preloadingDirection, true);
+        }
+
+        function stop() {
+            if (animationTimer) {
+                clearTimeout(animationTimer);
+                animationTimer = false;
+                return true;
+            }
+            return false;
+        }
+
+        function play() {
+            showFrame(animationPosition + 1);
+            let elem = document.getElementById("load");
+            let p = (animationPosition * 7.69) + 7.69;
+            elem.style.width = p + '%';
+            animationTimer = setTimeout(play, 500);
+        }
+
+        function playStop() {
+            if (!stop()) {
+                play();
+            }
+        }
     </script>
 </body>
 </html>
