--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -36,6 +36,9 @@
             bottom: 0;
             left: 1%;
             pointer-events: none;
+
+
+            z-index: 2;
         }
         #load{
             position: absolute;
@@ -44,11 +47,15 @@
             width: 0;
             height: 20px;
             background-color: rgba(255, 161, 20, 0.35);
+
+
+            z-index: 2;
         }
         .map {
             position: absolute;
             width: 100%;
             height: 100%;
+            z-index: 1;
         }
         .time{
             transform: translateX(-50%) translateY(-50%);
@@ -57,9 +64,11 @@
             left: 50%;
             letter-spacing: 5px;
             pointer-events: none;
+            z-index: 2;
         }
         .clock {
             font-size: 200px;
+
         }
         .date {
             transform: translateX(25%);
