--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -7,74 +7,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css" />
     <link rel="stylesheet" href="https://cdn.maptiler.com/mapbox-gl-js/v1.5.1/mapbox-gl.css" />
     <link href="https://fonts.googleapis.com/css2?family=Play&display=swap" rel="stylesheet">
-    <style>
-        body, html {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            background: black;
-            color: rgba(255, 161, 20, 1);
-            font-family: 'Play', sans-serif;
-            text-shadow: 0 0 20px black;
-            font-weight: bold;
 
-        }
-        .leaflet-container{
-            background: black;
-        }
-        .leaflet-pane{
-            position: static ;
-        }
-        .leaflet-control-attribution{
-            visibility: hidden;
-        }
-
-        #timestamp{
-            text-align:center;
-            position: absolute;
-            bottom: 0;
-            left: 1%;
-            pointer-events: none;
-
-
-            z-index: 2;
-        }
-        #load{
-            position: absolute;
-            bottom: 0;
-
-            width: 0;
-            height: 20px;
-            background-color: rgba(255, 161, 20, 0.35);
-
-
-            z-index: 2;
-        }
-        .map {
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-        .time{
-            transform: translateX(-50%) translateY(-50%);
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            letter-spacing: 5px;
-            pointer-events: none;
-            z-index: 2;
-        }
-        .clock {
-            font-size: 200px;
-
-        }
-        .date {
-            transform: translateX(25%);
-            font-size: 150px;
-        }
-    </style>
+    <link rel="stylesheet" href="static/style.css" />
 </head>
 
 <body>
@@ -87,142 +21,8 @@
     <div id="load"></div>
     <div id="timestamp"></div>
     <div id="map" class="map"></div>
-    <script>
-        function showTime(){
-            let date = new Date();
-            let h = date.getHours(); // 0 - 23
-            let m = date.getMinutes(); // 0 - 59
-            let s = date.getSeconds(); // 0 - 59
-
-            h = (h < 10) ? "0" + h : h;
-            m = (m < 10) ? "0" + m : m;
-            s = (s < 10) ? "0" + s : s;
-
-            let time = h + ":" + m + ":" + s;
-            document.getElementById("Clock").innerText = time;
-            document.getElementById("Clock").textContent = time;
-
-            setTimeout(showTime, 1000);
-        }
-
-        showTime();
-    </script>
-    <script>
-        function showDate(){
-            let date = new Date();
-            let d = date.getDate();
-            let m = date.getMonth() + 1;
-            d = (d < 10) ? "0" + d : d;
-            m = (m < 10) ? "0" + m : m;
-            let dd = d + "." + m;
-            document.getElementById("Date").innerText = dd;
-            document.getElementById("Date").textContent = dd;
-            let date_next = new Date(date.getFullYear(), m-1, d+1, 0, 0, 0);
-            let diff = date_next - date;
-            setTimeout(showDate, diff);
-        }
-
-        showDate();
-    </script>
-    <script>
-        var map = L.map('map', { zoomControl: false }).setView([55.81370, 37.36522], 7);
-        var gl = L.mapboxGL({
-                    style: 'https://api.maptiler.com/maps/e9344f37-0d92-4f4b-99de-5d7a038c5620/style.json?key=auHeH62VVMXfIVFOMESZ',
-                    zoomControl: false
-                }).addTo(map);
-    </script>
-    <script>
-        let timestamps = [];
-        let radarLayers = [];
-        let animationPosition = 0;
-        let removeZeroLayer = 0;
-
-        function getNewTime(){
-            let f = true;
-            if(timestamps.length === 0){
-                f = false;
-            }
-            else{
-                removeZeroLayer = timestamps[0];
-            }
-            let apiRequest = new XMLHttpRequest();
-            apiRequest.open("GET", "https://api.rainviewer.com/public/maps.json", f);
-            apiRequest.onload = function(e) {
-                timestamps = JSON.parse(apiRequest.response);
-            };
-            apiRequest.send();
-            setTimeout(getNewTime, 1000*60*10);
-
-        }
-        getNewTime();
-        if (timestamps.length !== 0)
-        {
-            play();
-        }
-
-        function addLayer(ts) {
-            if (removeZeroLayer !== 0){
-                map.removeLayer(radarLayers[removeZeroLayer]);
-            }
-            if (!radarLayers[ts]) {
-                let layers = 'https://tilecache.rainviewer.com/v2/radar/' + ts + '/256/{z}/{x}/{y}/8/1_1.png';
-                radarLayers[ts] = new L.TileLayer(layers, {
-                    tileSize: 256,
-                    opacity: 0.001,
-                    zIndex: ts
-                });
-            }
-            if (!map.hasLayer(radarLayers[ts])) {
-                map.addLayer(radarLayers[ts]);
-            }
-        }
-
-        function changeRadarPosition(position, preloadOnly) {
-            while (position >= timestamps.length) {
-                position -= timestamps.length;
-            }
-            while (position < 0) {
-                position += timestamps.length;
-            }
-
-            let currentTimestamp = timestamps[animationPosition];
-            let nextTimestamp = timestamps[position];
-
-            addLayer(nextTimestamp);
-
-            if (preloadOnly) {
-                return;
-            }
-            animationPosition = position;
-
-            if (radarLayers[currentTimestamp]) {
-                radarLayers[currentTimestamp].setOpacity(0);
-            }
-            radarLayers[nextTimestamp].setOpacity(100);
-
-            // let logDate = new Date(nextTimestamp*1000);
-            // let h = logDate.getHours();
-            // let m = logDate.getMinutes();
-            //
-            // h = (h < 10) ? "0" + h : h;
-            // m = (m < 10) ? "0" + m : m;
-            // document.getElementById("timestamp").innerHTML = h + ":" + m;
-        }
-
-        function showFrame(nextPosition) {
-            let preloadingDirection = nextPosition - animationPosition > 0 ? 1 : -1;
-            changeRadarPosition(nextPosition);
-            changeRadarPosition(nextPosition + preloadingDirection, true);
-        }
-
-        function play() {
-            showFrame(animationPosition + 1);
-            let elem = document.getElementById("load");
-            let p = (animationPosition * 7.69) + 7.69;
-            elem.style.width = p + '%';
-            setTimeout(play, 500);
-        }
-
-    </script>
 </body>
+<script src="static/rainviewer.js"></script>
+<script src="static/time.js"></script>
+<script src="static/date.js"></script>
 </html>
