--- a/server/templates/homepage.html
+++ b/server/templates/homepage.html
@@ -19,7 +19,22 @@
     </div>
 
     <div id="load"></div>
+
     <div id="map" class="map"></div>
+<!--    <script>-->
+<!--        try {-->
+<!--            var xhttp = new XMLHttpRequest();-->
+<!--            xhttp.open('GET', 'https://api.weather.yandex.ru/v1/informers?lat=55.81370&lon=37.36522', false);-->
+<!--            xhttp.setRequestHeader('Content-type', 'text/html', 'X-Yandex-API-Key: b93b02b0-da03-4600-9a9c-d396d249fd5b');-->
+<!--            xhttp.send();-->
+<!--            var response = JSON.parse(xhttp.response);-->
+<!--            console.log(xhttp.response);-->
+<!--        }-->
+<!--        catch (error) {-->
+<!--            console.log(error.message);-->
+<!--        }-->
+
+<!--    </script>-->
 </body>
 <script src="static/rainviewer.js"></script>
 <script src="static/time.js"></script>
