--- a/server/templates/static/style.css
+++ b/server/templates/static/style.css
@@ -3,7 +3,7 @@ body, html {
     height: 100%;
     margin: 0;
     padding: 0;
-    background: black;
+    background: wheat;
     color: rgba(255, 161, 20, 1);
     font-family: 'Play', sans-serif;
     text-shadow: 0 0 20px black;
@@ -23,17 +23,41 @@ body, html {
     position: absolute;
     bottom: 0;
     width: 1%;
-    height: 20px;
+    height: 10px;
     background-color: rgba(255, 161, 20, 0.35);
-    z-index: 2;
+    z-index: 15;
 }
 
 .map {
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 1;
+    z-index: 5;
 }
+.shadow {
+    position:absolute;
+    display:block;
+    margin:0;
+    padding:0;
+    height:100%; width:100%;
+    box-shadow: 0 0 30px 10px #000000 inset;
+    background: none;
+    z-index: 10;
+    pointer-events:none;
+}
+
+.shadow_two {
+    position:absolute;
+    display:block;
+    margin:0;
+    padding:0;
+    height:100%; width:100%;
+    box-shadow: 0 0 1000px 150px #000000 inset;
+    background: none;
+    z-index: 10;
+    pointer-events:none;
+}
+
 .time{
     transform: translateX(-50%) translateY(-50%);
     position: absolute;
@@ -41,7 +65,7 @@ body, html {
     left: 50%;
     letter-spacing: 5px;
     pointer-events: none;
-    z-index: 2;
+    z-index: 10;
 }
 .clock {
     font-size: 200px;
@@ -58,16 +82,33 @@ body, html {
     padding: 10px;
     float:right;
     text-align: right;
+    text-shadow: 0 0 4px black;
     font-size: 50px;
     letter-spacing: 1px;
     width: auto;
     height: auto;
-    z-index: 2;
+    z-index: 15;
     color: rgb(229, 170, 102);
 }
 #forecast{
     font-size: 20px;
 }
+div#forecast > div{
+    margin: 10px;
+}
 #temp_like{
     color: rgb(157, 112, 50);
+    text-shadow: none;
 }
+.icon{
+    float: right;
+    width: 10%;
+    height: 10%;
+}
+.icon_mini{
+    padding-left: 4%;
+    float: right;
+    width: 5%;
+    height: 5%;
+}
+
